added new css file

--- a/circles.html
+++ b/circles.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+	<!-- Load the CSS -->
+	<link rel="stylesheet" href="css/circles.css">
 	<!-- Load the Paper.js library -->
 	<script type="text/javascript" src="js/paper-full.js"></script>
 	<!-- Load external PaperScript and associate it with myCanvas -->
